--- a/refs.bib
+++ b/refs.bib
@@ -160,3 +160,174 @@
   year={2021},
   publisher={Cold Spring Harbor Laboratory Preprints}
 }
+
+ @misc{jstree, title={JSTree}, url={http://lh3lh3.users.sourceforge.net/jstree.shtml}, journal={Jstree}, author={Li, Heng}} 
+ 
+ @article {Thornlow2021.12.02.471004,
+	author = {Thornlow, Bryan and Kramer, Alexander and Ye, Cheng and De Maio, Nicola and McBroome, Jakob and Hinrichs, Angie S. and Lanfear, Robert and Turakhia, Yatish and Corbett-Detig, Russell},
+	title = {Online Phylogenetics using Parsimony Produces Slightly Better Trees and is Dramatically More Efficient for Large SARS-CoV-2 Phylogenies than de novo and Maximum-Likelihood Approaches},
+	elocation-id = {2021.12.02.471004},
+	year = {2022},
+	doi = {10.1101/2021.12.02.471004},
+	publisher = {Cold Spring Harbor Laboratory},
+	abstract = {Phylogenetics has been foundational to SARS-CoV-2 research and public health policy, assisting in genomic surveillance, contact tracing, and assessing emergence and spread of new variants. However, phylogenetic analyses of SARS-CoV-2 have often relied on tools designed for de novo phylogenetic inference, in which all data are collected before any analysis is performed and the phylogeny is inferred once from scratch. SARS-CoV-2 datasets do not fit this mould. There are currently over 510 million sequenced SARS-CoV-2 genomes in publiconline databases, with tens of thousands of new genomes added every day. Continuous data collection, combined with the public health relevance of SARS-CoV-2, invites an "online" approach to phylogenetics, in which new samples are added to existing phylogenetic trees every day. The extremely dense sampling of SARS-CoV-2 genomes also invites a comparison between Likelihoodlikelihood and Parsimonyparsimony approaches to phylogenetic inference. Maximum Likelihoodlikelihood (ML) methods are more accurate when there are multiple changes at a single site on a single branch, but this accuracy comes at a large computational cost, and the dense sampling of SARS-CoV-2 genomes means that these instances will be extremely rare. because each internal branch is expected to be extremely short. Therefore, it may be that approaches based on Maximum Parsimonymaximum parsimony (MP) are sufficiently accurate for reconstructing phylogenies of SARS-CoV-2, and their simplicity means that they can be applied to much larger datasets. Here, we evaluate the performance of de novo and online phylogenetic approaches, and ML and MP frameworks, for inferring large and dense SARS-CoV-2 phylogenies. Overall, we find that online phylogenetics produces similar phylogenetic trees to de novo analyses for SARS-CoV-2, and that MP optimizations produce more accurate SARS-CoV-2 phylogenies than do ML optimizations. Since MP is thousands of times faster than presently available implementations of ML and online phylogenetics is faster than de novo, we therefore propose that, in the context of comprehensive genomic epidemiology of SARS-CoV-2, MP online phylogenetics approaches should be favored.Competing Interest StatementRobert Lanfear works as an advisor to GISAID. The remaining authors declare no competing interests.},
+	URL = {https://www.biorxiv.org/content/early/2022/05/18/2021.12.02.471004},
+	eprint = {https://www.biorxiv.org/content/early/2022/05/18/2021.12.02.471004.full.pdf},
+	journal = {bioRxiv}
+}
+
+@article{McBroome2021,
+  doi = {10.1093/molbev/msab264},
+  url = {https://doi.org/10.1093/molbev/msab264},
+  year = {2021},
+  month = sep,
+  publisher = {Oxford University Press ({OUP})},
+  volume = {38},
+  number = {12},
+  pages = {5819--5824},
+  author = {Jakob McBroome and Bryan Thornlow and Angie S Hinrichs and Alexander Kramer and Nicola De Maio and Nick Goldman and David Haussler and Russell Corbett-Detig and Yatish Turakhia},
+  editor = {Jian Lu},
+  title = {A Daily-Updated Database and Tools for Comprehensive {SARS}-{CoV}-2 Mutation-Annotated Trees},
+  journal = {Molecular Biology and Evolution}
+}
+
+@article{federhen2012ncbi,
+  title={The NCBI taxonomy database},
+  author={Federhen, Scott},
+  journal={Nucleic acids research},
+  volume={40},
+  number={D1},
+  pages={D136--D143},
+  year={2012},
+  publisher={Oxford University Press}
+}
+
+@article{edgar2022petabase,
+  title={Petabase-scale sequence alignment catalyses viral discovery},
+  author={Edgar, Robert C and Taylor, Jeff and Lin, Victor and Altman, Tomer and Barbera, Pierre and Meleshko, Dmitry and Lohr, Dan and Novakovsky, Gherman and Buchfink, Benjamin and Al-Shayeb, Basem and others},
+  journal={Nature},
+  pages={1--6},
+  year={2022},
+  publisher={Nature Publishing Group}
+}
+
+@article{argimon2016microreact,
+  title={Microreact: visualizing and sharing data for genomic epidemiology and phylogeography},
+  author={Argim{\'o}n, Silvia and Abudahab, Khalil and Goater, Richard JE and Fedosejev, Artemij and Bhai, Jyothish and Glasner, Corinna and Feil, Edward J and Holden, Matthew TG and Yeats, Corin A and Grundmann, Hajo and others},
+  journal={Microbial genomics},
+  volume={2},
+  number={11},
+  year={2016},
+  publisher={Microbiology Society}
+}
+
+@article{abudahab2021phylocanvas,
+  title={Phylocanvas. gl: A WebGL-powered JavaScript library for large tree visualisation},
+  author={Abudahab, Khalil and Underwood, Anthony and Taylor, Ben and Yeats, Corin and Aanensen, David M},
+  year={2021},
+  publisher={OSF Preprints}
+}
+
+@Article{archaeopteryx,
+   Author="Han, M. V.  and Zmasek, C. M. ",
+   Title="{phylo{X}{M}{L}: {X}{M}{L} for evolutionary biology and comparative genomics}",
+   Journal="BMC Bioinformatics",
+   Year="2009",
+   Volume="10",
+   Pages="356",
+   Month="Oct"
+}
+
+
+@article{itol,
+  title={Interactive Tree Of Life (iTOL) v5: an online tool for phylogenetic tree display and annotation},
+  author={Letunic, Ivica and Bork, Peer},
+  journal={Nucleic acids research},
+  volume={49},
+  number={W1},
+  pages={W293--W296},
+  year={2021},
+  publisher={Oxford University Press}
+}
+
+@article{ete,
+  title={ETE: a python Environment for Tree Exploration},
+  author={Huerta-Cepas, Jaime and Dopazo, Joaqu{\'\i}n and Gabald{\'o}n, Toni},
+  journal={BMC bioinformatics},
+  volume={11},
+  number={1},
+  pages={1--7},
+  year={2010},
+  publisher={Springer}
+}
+
+@article{moshiri2020treeswift,
+  title={TreeSwift: A massively scalable Python tree package},
+  author={Moshiri, Niema},
+  journal={SoftwareX},
+  volume={11},
+  pages={100436},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@misc{lapis,
+author = {Chen, Chaoran},
+title = {LAPIS for Monkeypox},
+howpublished = {\url{https://mpox-lapis.genspectrum.org/docs/#introduction}},
+month = {},
+year = {2022},
+note = {(Accessed on 06/02/2022)}
+}
+
+@article{sanderson2021variation,
+  title={Variation at Spike position 142 in SARS-CoV-2 Delta genomes is a technical artifact caused by dropout of a sequencing amplicon},
+  author={Sanderson, Theo and Barrett, Jeffrey C},
+  journal={Wellcome Open Research},
+  volume={6},
+  number={305},
+  pages={305},
+  year={2021},
+  publisher={F1000 Research Limited}
+}
+
+@article{de2020masking,
+  title={Masking strategies for SARS-CoV-2 alignments},
+  author={De Maio, Nicola and Walker, Conor and Borges, Rui and Weilguny, Lukas and Slodkowicz, Greg and Goldman, Nick},
+  year={2020}
+}
+
+@article{sanderson2021systematic,
+  title={Systematic Errors Associated with Some Implementations of ARTIC V4 and a Fast Workflow to Prescreen Samples for New Problematic Sites},
+  author={Sanderson, Theo and De Maio, Nicola and Hinrichs, Angie S. and Bernardi Schneider, Adriano de and Walker, Conor and Goldman, Nick and Turakhia, Yatish and Lanfear, Robert and Corbett-Detig, Russell},
+  journal={Virological.org},
+  year={2021},
+  publisher={https://virological.org/t/issues-with-sars-cov-2-sequencing-data/473/16}
+}
+
+@article {CantrellFedarko2021empress,
+  author = {Cantrell, Kalen and Fedarko, Marcus W. and Rahman, Gibraan and McDonald, Daniel and Yang, Yimeng and Zaw, Thant and Gonzalez, Antonio and Janssen, Stefan and Estaki, Mehrbod and Haiminen, Niina and Beck, Kristen L. and Zhu, Qiyun and Sayyari, Erfan and Morton, James T. and Armstrong, George and Tripathi, Anupriya and Gauglitz, Julia M. and Marotz, Clarisse and Matteson, Nathaniel L. and Martino, Cameron and Sanders, Jon G. and Carrieri, Anna Paola and Song, Se Jin and Swafford, Austin D. and Dorrestein, Pieter C. and Andersen, Kristian G. and Parida, Laxmi and Kim, Ho-Cheol and V{\'a}zquez-Baeza, Yoshiki and Knight, Rob},
+  editor = {Hug, Laura A.},
+  title = {EMPress Enables Tree-Guided, Interactive, and Exploratory Analyses of Multi-omic Data Sets},
+  volume = {6},
+  number = {2},
+  elocation-id = {e01216-20},
+  year = {2021},
+  doi = {10.1128/mSystems.01216-20},
+  publisher = {American Society for Microbiology Journals},
+  URL = {https://msystems.asm.org/content/6/2/e01216-20},
+  eprint = {https://msystems.asm.org/content/6/2/e01216-20.full.pdf},
+  journal = {mSystems}
+}
+
+% 35130474 
+@Article{pmid35130474,
+   Author="Heguy, A.  and Dimartino, D.  and Marier, C.  and Zappile, P.  and Guzman, E.  and Duerr, R.  and Wang, G.  and Plitnick, J.  and Russell, A.  and Lamson, D. M.  and St George, K. ",
+   Title="{{A}mplification {A}rtifact in {S}{A}{R}{S}-{C}o{V}-2 {O}micron {S}equences {C}arrying {P}681{R} {M}utation, {N}ew {Y}ork, {U}{S}{A}}",
+   Journal="Emerg Infect Dis",
+   Year="2022",
+   Volume="28",
+   Number="4",
+   Pages="881--883",
+   Month="04"
+}
