--- a/00_Article_Merge.tex
+++ b/00_Article_Merge.tex
@@ -7,7 +7,6 @@
 \begin{document}
 
 \include{01_Article_MainText}
-\include{02_Article_Supplementary}
+%\include{02_Article_Supplementary}
 %\include{03_Article_SupplementaryVideos}
-
 \end{document}
